[565] - Ensure Details button icon and text are aligned correctly

--- a/visualizer/style.css
+++ b/visualizer/style.css
@@ -512,6 +512,7 @@ svg.bubbleprof.complete-fade-out {
   justify-content: space-between;
 }
 
+#side-bar .bar.collapse-control,
 #footer .bar.collapse-control {
   justify-content: flex-end;
 }
